--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <div id="panel1">
             <p><span id="sens">&nbsp;<br>点击下方的测试开始</span>&nbsp;<button id="btn2">归零</button></p>
             <select id="character" name="character">
+                <optgroup label="其他">
+                    <option value="konan" selected>柯南</option>
+                    
+                </optgroup>
                 <optgroup label="律师">
                     <option value="cbt" selected>成步堂龙一</option>
                     <option value="qian">绫里千寻</option>
@@ -51,6 +55,7 @@
             </select>
             <select id="voicetype" name="voicetype">
                 <optgroup label="日语">
+                    <option value="shinjitsu" selected>真相</option>
                     <option value="igiari" selected>異議あり!</option>
                     <option value="matta">待った!</option>
                     <option value="kurae">くらえ!</option>
